# icc-eval-core

./: .env.TEMPLATE  .eslintrc  .gitignore  .prettierrc  README.md  Research Organization.xlsx  SETUP.md  bun.lockb  docker-compose.yml  drizzle.config.ts  package.json  poster.html  run.sh  run.ts  run_bun.sh  run_pipeline.sh  run_stack.sh  script.ts  tsconfig.json
api/: README.md  icite.ts  reporter-publications-results.d.ts  (+1 more)
backend/: Dockerfile  launch_api.sh  pyproject.toml
backend/icc_eval_core_api/: manage.py
backend/icc_eval_core_api/api/: adapters.py  admin.py  auth_views.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/icc_eval_core_api/api/management/commands/: import_dataset.py
backend/icc_eval_core_api/api/migrations/: 0001_initial.py  0001_squashed_0008_alter_project_date_end_alter_project_date_start.py  0002_alter_publication_modified.py  0002_user_orcid.py  0003_create_postgres_mcp_reader.py  0003_orcidprojectmap_alter_analytics_options_and_more.py  0003_rename_repos_coreproject_repositories_and_more.py  0004_alter_analytics_core_project.py  0004_project_fiscal_year.py  0005_delete_repooverview_alter_orcidprojectmap_options.py  0009_update_analytics_schema.py  0010_rename_top_cities_analyticsoverview_cities_and_more.py
backend/icc_eval_core_api/api/templates/account/: login.html
backend/icc_eval_core_api/api/tests/: __init__.py  basic.py  mcp_reader.py
backend/icc_eval_core_api/icc_eval_core_api/: asgi.py  settings.py  urls.py  wsgi.py
backend/icc_eval_core_api/templates/allauth/layouts/: manage.html
(+248 files in other folders)
